# tennis-lab

./: .gitignore  AGENTS.md  CITATION.cff  LEARNINGS.md  LICENSE  LICENSES.md  PROJECT_STATUS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
analyses/slam_upsets/: README.md  results_synthesis.md  run.py  run_market.py  run_market_probability_sensitivities.py  run_publication.py  run_rating_history.py  run_robustness.py
artifacts/: README.md
artifacts/data_audit/: coverage.csv  report.md  slam_match_counts.csv
artifacts/elo/: calibration.csv  cold_start_by_entry.csv  cold_start_by_slam_era.csv  cold_start_by_tour.csv  cold_start_by_year.csv  cold_start_report.md  heldout_diagnostics.csv  model_selection.csv  prediction_coverage.csv  slam_calibration.csv  slam_diagnostics.csv
artifacts/odds_benchmark/: benchmark_analysis_metadata.csv  benchmark_calibration.csv  benchmark_exclusions.csv  benchmark_metadata.csv  benchmark_rolling_five_editions.csv  benchmark_summary.csv  matching_audit.csv  odds_coverage.csv  results.md  source_field_audit.csv
artifacts/publication/: alt_text.md  final_figure_data.csv  final_figure_metadata.json  methodology_and_sources.md
artifacts/robustness/: influence_diagnostics.csv  market_probability_metadata.csv  (+28 more)
config/: elo_model.json  final_figure.json  market_probability_sensitivities.json  odds_aliases.csv  odds_sources.lock.json  odds_sources.toml  rating_history_sensitivities.json  robustness.json  sources.lock.json  sources.toml
data/: README.md
docs/: architecture.md  canonical_schema.md  source_provenance.md
tests/: conftest.py  test_build_and_audit.py  test_final_figure.py  test_market_probability_sensitivity.py  test_normalize.py  test_odds_benchmark.py  test_odds_sources.py  test_rating_history.py  test_ratings.py  test_repository_hygiene.py  test_reproduction.py  test_robustness.py  test_sensitivity_artifacts.py  test_sources.py  test_upsets.py
(+63 files in other folders)
